--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "popper.js": "^1.16.1",
     "unique-names-generator": "^4.7.1",
     "vue": "^2.6.14",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
